fixed dark mode

--- a/apps/static/assets/css/black-dashboard.css
+++ b/apps/static/assets/css/black-dashboard.css
@@ -13447,6 +13447,7 @@ Copyright (c) 2015 Daniel Eden
 
 #suggestions-list li {
   padding: 10px;
+  color: black;
   cursor: pointer;
 }
 
